# LLaVochka

./: README.md  llava_custom.json  pyproject.toml  requirements.txt  test.sh  test_2.ipynb  webui.sh
docs/: Evaluation.md
llava_mini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llavamini/: constants.py  conversation.py
llavamini/eval/: model_qa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_science.py  run_llava_mini.py
llavamini/eval/video/: egoschema_mc.py  eval_benchmark_1_correctness.py  eval_benchmark_2_detailed_orientation.py  eval_benchmark_3_context.py  eval_benchmark_4_temporal.py  eval_benchmark_5_consistency.py  eval_video_qa.py  mlvu_mc.py  mvbench_mc.py  run_inference_benchmark_consistency.py  run_inference_benchmark_general.py  run_inference_video_qa.py  run_inference_video_qa_act.py
llavamini/model/: __init__.py  builder.py  llavamini_arch.py
llavamini/model/language_model/: llavamini_llama.py
llavamini/serve/: gradio_web_server.py  model_worker.py
llavamini/train/: llava_trainer.py  train.py  train_mem.py
scripts/llavamini/: train.sh
scripts/llavamini/eval_image/: gqa.sh  llavabench.sh  mmbench.sh  mmbench_cn.sh  mme.sh  mmvet.sh  pope.sh  seed.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
scripts/llavamini/eval_video/: eval_benchmark_1_correctness.sh  eval_benchmark_2_detail.sh  eval_benchmark_3_contextual.sh  eval_benchmark_4_temporal.sh  eval_benchmark_5_consistency.sh  eval_qa_activitynet.sh  eval_qa_msrvtt.sh  eval_qa_msvd.sh  run_consistency_benckmarking.sh  run_egoschema_mc.sh  run_mlvu_mc.sh  (+6 more)
